--- a/librechat-rw.yaml
+++ b/librechat-rw.yaml
@@ -35,13 +35,9 @@ endpoints:
       modelDisplayLabel: "Anyscale"
 
     - name: azureOpenAI
-      groups:
-        - group: "my-westus" # arbitrary name
-          apiKey: "${TRES_AZURE_OPENAI_KEY}"
-          instanceName: "tres-azure-openai" # name of the resource group or instance
-          version: "2024-05-01-preview"
-
-          models:
-            gpt-4o-mini:
-              deploymentName: tres-gpt4o-mini
-              version: "24-05-01-preview"
+      apiKey: "${TRES_AZURE_OPENAI_KEY}"
+      instanceName: "tres-azure-openai" 
+      models:
+        gpt-4o-mini:
+          deploymentName: tres-gpt4o-mini
+          version: "24-05-01-preview"
